--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,31 @@
+body {
+  background: #e43a15; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #e65245,
+    #e43a15
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e65245,
+    #e43a15
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+#gondor-tree{
+  height: 270px;
+  margin-right: 15px;
 }
 
 @keyframes App-logo-spin {
